# hypermodern-python-ems

./: LICENSE  README.md  pyproject.toml
src/hypermodern_python_ems/: __init__.py  console.py  console1.py
src/hypermodern_python_ems.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
