[tool.poetry]
name = "hypermodern-python-ems"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
hypermodern-python-ems = "hypermodern_python_ems.console:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/emschlie/hypermodern-python-ems"
repository = "https://github.com/emschlie/hypermodern-python-ems"
keywords = ["hypermodern"]

